--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -23,5 +22,7 @@
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
